# aiowinreg

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: python-windows-exe.yml
aiowinreg/: __init__.py  __main__.py  _version.py  ahive.py  hive.py
aiowinreg/dontuseitsold/remcom/: server.py
aiowinreg/examples/: console.py
aiowinreg/filestruct/: hbin.py  header.py  lf.py  nk.py  regcell.py  ri.py  sk.py  valuelist.py  vk.py
aiowinreg/utils/: afile.py  regcmdpathcompleter.py
aiowinreg/utils/remcom/: server.py
aiowinreg/utils/remcom/protocol/: __init__.py
builder/pyinstaller/: build.bat
tests/: .coveragerc  coverage.sh  test_async.py  test_blocking.py  test_console.py  test_version.py
tests/testdata/nt/: sam.reg  security.reg  software.reg  system.reg
tests/testdata/win2008_32/: sam.reg  security.reg
tests/testdata/win2008r2_64/: sam.reg  security.reg
tests/testdata/win2012_64/: sam.reg  security.reg
tests/testdata/win2016_64/: sam.reg  security.reg
tests/testdata/win2019_64/: sam.reg  security.reg
tests/testdata/win2022_64/: sam.reg  security.reg
