
[build-system]
requires = [
    "setuptools",
]

[project]
name = "aiowinreg"
description = "Windows registry file reader"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
]
dependencies = [
    "winacl >= 0.1.1",
    "prompt-toolkit >= 3.0.2"
]
authors = [
    {name = "Tamas Jos", email = "skelsec@skelsecprojects.com"},
]
dynamic = ["version", "readme"]

[tool.setuptool.dynamic.entry-points]
console-scripts = [
    "awinreg = aiowinreg.__main__:main"
]

[tool.setuptools.dynamic]
version = {attr = "aiowinreg._version.__version__"}
readme = {file = ["README.md"]}
